# mnlc

./: CMakeLists.txt  exit  package.xml
action/: exploration.action
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh
catkin_ws/devel/lib/pkgconfig/: rbe3002_lab2.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc
catkin_ws/devel/lib/turtlebot3_fake/: turtlebot3_fake_node
catkin_ws/devel/lib/turtlebot3_gazebo/: turtlebot3_drive
catkin_ws/devel/share/rbe3002_lab2/cmake/: rbe3002_lab2Config.cmake
catkin_ws/devel/share/turtlebot3_fake/cmake/: turtlebot3_fakeConfig.cmake
catkin_ws/devel/share/turtlebot3_gazebo/cmake/: turtlebot3_gazeboConfig.cmake
catkin_ws/src/lab2/launch/: rbe3002_lab2_launch.launch
cmake/: FindMLPACK.cmake
include/: d_star_lite_ros.h  map.h  math.h  mersenne_twister.h  mnlc_a_star.h  mnlc_d_star_lite.h  mnlc_field_d_star.h  mnlc_frontier_assigner.h  mnlc_global_costmap_opencv.h  mnlc_global_rrt_detector.h  mnlc_hdbscan_frontier_filter.h  mnlc_lexi_queue.h  mnlc_local_rrt_detector.h  mnlc_meanshift_frontier_filter.h  mnlc_simple_costmap.h  mnlc_vornoi_visualizer.h  planner.h  quadtree.h
launch/: amcl.launch  final_project.launch  rbe3002_lab2_combined.launch  rbe3002_lab2_launch.launch  rtab_map.launch
maps/: gaussian_blur_rotated.pgm  map.pgm  map1.pgm  map1.yaml  maze1.pgm  maze1.yaml  rtabmap.pgm  rtabmap.yaml  simple_map.pgm:Zone.Identifier
mnlc/: mnlc_controller.py
mnlc/mnlc_localization/mnlc_global_localization/: mnlc_global_costmap_opencv.py
mnlc/mnlc_localization/mnlc_local_localization/: mnlc_local_costmap_opencv.py
mnlc/mnlc_mapping/: mnlc_assigner.py
mnlc/mnlc_mapping/mnlc_frontier_detectors/mnlc_global_frontier_detectors/: mnlc_global_opencv_frontier_detector.py  mnlc_global_rrt_detector.py
mnlc/mnlc_mapping/mnlc_frontier_detectors/mnlc_local_frontier_detectors/: mnlc_local_rrt_detector.py
mnlc/mnlc_mapping/mnlc_frontier_filters/: mnlc_meanshift_frontier_filter.py  mnlc_sklearn_frontier_filter.py
mnlc/mnlc_navigation/mnlc_global_navigation/: mnlc_a_star.py  mnlc_d_star.py  queues.py
mnlc/mnlc_navigation/mnlc_local_navigation/: mnlc_dwa.py  mnlc_pure_pursuit.py
msg/: PointArray.msg  Pose2d.msg
param/: mncl_frontier_assigner_params.yaml  mncl_frontier_filter_params.yaml  mncl_global_controller_params.yaml  mncl_global_costmap_params.yaml  mnlc_a_star_params.yaml  mnlc_assigner_params.yaml  mnlc_controller_params.yaml  mnlc_d_star_lite_params.yaml  mnlc_frontier_assigner_params.yaml  mnlc_global_costmap_opencv_params.yaml  mnlc_global_opencv_frontier_detector_params.yaml  mnlc_global_rrt_detector_params.yaml  mnlc_hdbscan_frontier_filter_params.yaml  mnlc_lidar_filter_params.yaml  mnlc_local_costmap_opencv_params.yaml  mnlc_local_rrt_detector_params.yaml  mnlc_meanshift_frontier_filter_params.yaml  mnlc_pure_pursuit_params.yaml  mnlc_simple_costmap_params.yaml  mnlc_sklearn_frontier_filter_params.yaml
param_dep/: mncl_frontier_detector_params.yaml  mncl_global_controller_params.yaml
rviz/: rbe3002_final_demo.rviz
scripts/Other/: autoSSH.sh
src/: map.cpp  math.cpp  mersenne_twister.cpp  mnlc_a_star.cpp  mnlc_d_star_lite.cpp  mnlc_field_d_star.cpp  mnlc_frontier_assigner.cpp  mnlc_global_costmap_opencv.cpp  mnlc_global_rrt_detector.cpp  mnlc_hdbscan_frontier_filter.cpp  mnlc_lexi_queue.cpp  mnlc_local_rrt_detector.cpp  mnlc_meanshift_frontier_filter.cpp  mnlc_simple_costmap.cpp  mnlc_vornoi_visualizer.cpp  planner.cpp  quadtree.cpp  terster.cpp
src/Controllers/: mncl_global_controller.py  pid_controller.py
src/Costmaps/: mncl_global_costmap.py
src/Explorers/: frontier_assigner.py  frontier_detector.py  frontier_filter.py
src/Planners/: mncl_global_planner.py  priority_queue.py
src/hdbscan/Distance/: EuclideanDistance.cpp  EuclideanDistance.hpp  IDistanceCalculator.hpp  ManhattanDistance.cpp  ManhattanDistance.hpp
src/hdbscan/Hdbscan/: hdbscan.cpp  hdbscan.hpp
src/hdbscan/HdbscanStar/: cluster.cpp  cluster.hpp  hdbscanAlgorithm.cpp  hdbscanAlgorithm.hpp  hdbscanConstraint.cpp  hdbscanConstraint.hpp  outlierScore.cpp  outlierScore.hpp  undirectedGraph.cpp  undirectedGraph.hpp
src/hdbscan/Runner/: hdbscanParameters.hpp  hdbscanResult.cpp  hdbscanResult.hpp  hdbscanRunner.cpp  hdbscanRunner.hpp
src/hdbscan/Utils/: bitSet.cpp  bitSet.hpp
src/nodes/: lab2.py
src/nodes/Labs/Lab4/: nav_handler.py  path_planner.py  priority_queue.py
srv/: bounding_points.srv  cspace.srv
