<?xml version="1.0"?>
<package format="2">
  <name>rbe3002</name>
  <version>1.0.0</version>
  <description>A ROS package that implements software suite of mapping, navigation, and localization controllers</description>

  <author>Ethan Chandler</author>
  <maintainer email="ethanchandler5956f@gmail.com">Ethan Chandler</maintainer>

  <license>MIT</license>
  <url>http://wiki.ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>visualization_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>

</package>